fix close button too small

--- a/swipegallery/global.css
+++ b/swipegallery/global.css
@@ -8,11 +8,15 @@ body {
   --pinmark : rgba(247, 4, 4, 0.4);
   --selected-color:rgb(255, 173, 42);
 }
-.popup { position:absolute;top:3%;left:3%;width:94%;height:90%;
+.popup { position:absolute;top:2vh;left:2vw;width:96vw;height:95vh;
   border-radius: 5px;
   background:rgba(255, 235, 164, 0.9);overflow:hidden;z-index: 99}
 .tabs {--webkit-user-select: none;overflow:hidden  ; font-size:3.5vh;
   user-select: none;padding-left: 0.05em; background:rgb(143, 81, 0);color:gold}
+
+.loading {font-size:4vh}
+.app {height:99.5vh;top:0px;background-color: rgb(243, 208, 160); } /* splitpane divider need this */
+.closepopup {z-index:999;font-size:5vh;position:absolute;right:2vw;top:1vh;color:black;font-weight: bold;}
 
 select {font-size:4vh}
 .selected {background: rgb(255, 173, 42);border-radius: 0.25em;color:white}
